--- a/odoo.conf
+++ b/odoo.conf
@@ -1,6 +1,7 @@
 [options]
-<<<<<<< HEAD
-addons_path = C:\Users\ruifr\OneDrive\Documentos\Odoo\addons-enterprise,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-community,C:\Users\ruifr\OneDrive\Documentos\Odoo\purchase-workflow,C:\Users\ruifr\OneDrive\Documentos\Odoo\server-backend,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\partner-contact,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-comceptplus,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\fulfillxpress,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\ktvodoo,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\wibteck_blackbox,C:\Users\ruifr\OneDrive\Documentos\Odoo\sharevault13,C:\Users\ruifr\OneDrive\Documentos\Odoo\ordermatic,C:\Users\ruifr\OneDrive\Documentos\Odoo\CorvidTec,C:\Users\ruifr\OneDrive\Documentos\Odoo\AGLeader,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-freelancer,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-odooveloper
+addons_path = C:\Program Files (x86)\Odoo 13.0\server\odoo\addons
+
+;addons_path = C:\Program Files (x86)\Odoo 13.0\server\odoo\addons, C:\Users\ruifr\OneDrive\Documentos\Odoo\addons-enterprise,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-community,C:\Users\ruifr\OneDrive\Documentos\Odoo\purchase-workflow,C:\Users\ruifr\OneDrive\Documentos\Odoo\server-backend,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\partner-contact,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-;comceptplus,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\fulfillxpress,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\ktvodoo,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\wibteck_blackbox,C:\Users\ruifr\OneDrive\Documentos\Odoo\sharevault13,C:\Users\ruifr\OneDrive\Documentos\Odoo\ordermatic,C:\Users\ruifr\OneDrive\Documentos\Odoo\CorvidTec,C:\Users\ruifr\OneDrive\Documentos\Odoo\AGLeader,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-;freelancer,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-odooveloper
 
 admin_passwd = $pbkdf2-sha512$25000$DIFwjtGa857TOofwvtcaQw$6i83L8g6s4tTEBVtCGIVTWWDbNjbjayWmGQm2.lshenGP0QdIv2hC0oEPRzRP8oPhdW.W1FE9NRy8YXtdCHnzw
 bin_path = C:\Program Files (x86)\Odoo 13.0\thirdparty
@@ -13,30 +14,13 @@ db_password = openpgpwd
 db_port = 5432
 db_sslmode = prefer
 db_template = template0
-=======
-addons_path = C:\Users\ruifr\OneDrive\Documentos\Odoo\addons-enterprise,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-community,C:\Users\ruifr\OneDrive\Documentos\Odoo\purchase-workflow,C:\Users\ruifr\OneDrive\Documentos\Odoo\server-backend,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\partner-contact,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-comceptplus,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\fulfillxpress,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\ktvodoo,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\wibteck_blackbox,C:\Users\ruifr\OneDrive\Documentos\Odoo\sharevault13,C:\Users\ruifr\OneDrive\Documentos\Odoo\ordermatic,C:\Users\ruifr\OneDrive\Documentos\Odoo\CorvidTec,C:\Users\ruifr\OneDrive\Documentos\Odoo\AGLeader,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-freelancer,C:\Users\ruifr\OneDrive\Documentos\GitHub\Odoo\addons-odooveloper,C:\Users\ruifr\OneDrive\Documentos\Odoo\capera\addons,C:\Users\ruifr\OneDrive\Documentos\Odoo\capera\addons\custom,C:\Users\ruifr\OneDrive\Documentos\Odoo\capera\addons\libs\of
 
-
-admin_passwd = chaimite
-bin_path = C:\Program Files (x86)\Odoo 13.0\thirdparty
-csv_internal_sep = ,
-data_dir = C:\Users\ruifr\AppData\Local\OpenERP S.A.\Odoo
-db_host = localhost
-db_maxconn = 64
-db_password = openpgpwd
-db_port = 5432
-db_sslmode = prefer
-db_template = template1
->>>>>>> 862597b1dd3e47e887b894135d3e487b600f09d5
 db_user = openpg
 dbfilter = 13_*.*
 demo = {}
 email_from = False
-<<<<<<< HEAD
+
 geoip_database = C:\usr\share\GeoIP\GeoLite2-City.mmdb
-=======
-geoip_database = /usr/share/GeoIP/GeoLite2-City.mmdb
->>>>>>> 862597b1dd3e47e887b894135d3e487b600f09d5
 http_enable = True
 http_interface =
 http_port = 8073
@@ -50,23 +34,21 @@ limit_time_real_cron = None
 list_db = True
 log_db = False
 log_db_level = warning
-<<<<<<< HEAD
+
 log_handler = :INFO
-log_level = info
 logfile = C:\Program Files (x86)\Odoo 13.0\server\odoo.log
-=======
+
 log_handler = odoo.addons.queue_job:DEBUG
 
 
 log_level = debug
 logfile = C:\Program Files (x86)\Odoo 13.0\server\odoo.log
 logrotate = False
->>>>>>> 862597b1dd3e47e887b894135d3e487b600f09d5
 longpolling_port = 8073
 max_cron_threads = 2
 osv_memory_age_limit = 1.0
 osv_memory_count_limit = False
-<<<<<<< HEAD
+
 pg_path =
 pidfile =
 proxy_mode = False
@@ -74,20 +56,20 @@ reportgz = False
 screencasts =
 screenshots = C:\Users\ruifr\AppData\Local\Temp\odoo_tests
 server_wide_modules = base,web
-=======
+
 pg_path = C:\Program Files (x86)\Odoo 11.0\PostgreSQL\bin
 pidfile = None
 proxy_mode = False
 reportgz = False
 server_wide_modules = web
->>>>>>> 862597b1dd3e47e887b894135d3e487b600f09d5
+
 smtp_password = False
 smtp_port = 25
 smtp_server = localhost
 smtp_ssl = False
 smtp_user = False
 syslog = False
-<<<<<<< HEAD
+
 test_enable = False
 test_file =
 test_tags = None
@@ -96,7 +78,7 @@ unaccent = False
 upgrade_path =
 without_demo = False
 workers = None
-=======
+
 test_commit = False
 test_enable = False
 test_file = False
@@ -115,4 +97,3 @@ workers = 6
 [queue_job]
 channels = root:1
 TEST_QUEUE_JOB_NO_DELAY=1
->>>>>>> 862597b1dd3e47e887b894135d3e487b600f09d5
